--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@firebase/auth": "^0.21.5",
     "@react-native-community/netinfo": "^9.3.7",
-    "@react-native-firebase/app": "^17.4.0",
+    "@react-native-firebase/app": "^17.3.2",
     "@react-native-firebase/database": "^17.3.2",
     "@react-native-firebase/firestore": "^17.3.2",
     "@react-native-firebase/storage": "^17.3.2",
@@ -25,6 +25,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-awesome-alerts": "^2.0.0",
     "react-native-date-picker": "^4.2.9",
     "react-native-gesture-handler": "^2.9.0",
