--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AwesomeProject",
+  "name": "MadaniQafila",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-modal": "^13.0.1",
+    "react-native-rename": "^3.2.12",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0"
