--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "firebase": "^9.18.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "^0.71.3",
     "react-native-animatable": "^1.3.3",
     "react-native-date-picker": "^4.2.9",
     "react-native-gesture-handler": "^2.9.0",
